--- a/web/src/app.html
+++ b/web/src/app.html
@@ -2,10 +2,10 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8" />
-		<link rel="icon" href="%sveltekit.assets%/favicon.png" />
+		<link rel="icon" href="%sveltekit.assets%/img/logo.svg" type="image/svg+xml" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
-		<meta name="description" content="Enkido - Live coding environment for audio synthesis" />
-		<title>Enkido</title>
+		<meta name="description" content="NKIDO - Live coding environment for audio synthesis" />
+		<title>NKIDO</title>
 		%sveltekit.head%
 	</head>
 	<body data-sveltekit-preload-data="hover">
